doc: complete install and configuration